# nordichack

./: .gitignore  LICENSE  README  README.md  run-server.sh
controller/: controller.cpp  gpio.cpp  gpio.h  makefile  test.py
frontend/: Common.elm  ControlPanel.elm  Main.elm  WorkoutList.elm  elm-package.json  makefile  package.json
frontend/src/: Ant.elm  Common.elm  ControlPanel.elm  Main.elm  Model.elm  PrintF.elm  Workout.elm  WorkoutData.elm
frontend/tests/: ControlPanelTests.elm  FftTests.elm  PrintFTests.elm  Tests.elm  WorkoutTests.elm  elm-package.json
images/: icon-152x152.xcf
nordichack/: Cargo.toml  README.md
nordichack/.cargo/: config
nordichack/docker/: Dockerfile
nordichack/rust-ui-gtk/: Cargo.toml  README.md  build  docker-setup  files-from-lib.txt  files-from.txt  mylinker  pkg-config  setup
nordichack/rust-ui-gtk/.cargo/: config.toml
nordichack/rust-ui-gtk/src/: main.rs  ui.glade
nordichack/scripts/: build  deploy  docker-build  run
nordichack/src/: main.rs  nhtui.rs  rptreadmill.rs  treadmill.rs
schematic/: treadmill version2.fzz  treadmill.fzz
server/: antdevices.py  data.py  fakehrm.py  hrm.py  nordichack.py  schema.sql  server.py  tests.py  treadmill.py
server/static/: controller.html  controller.js  nordichack.css
server/templates/: controller.html  index.html
tools/: calibrate-incline.py  isrtest.c  samplingtest.c  test.py
